@startuml
!define Table(name, fields) class name { fields }
!define PK(x) + x
!define FK(x) - x

Table(Grupy,
  PK(ID_Grupy) INT AUTO_INCREMENT
  Nazwa_grupy CHAR(1) NOT NULL
)

Table(Druzyna,
  PK(ID_Druzyny) INT AUTO_INCREMENT
  Nazwa_druzyny VARCHAR(100) NOT NULL
  FK(ID_Grupy) INT
)

Table(Gracze,
  PK(ID_Gracza) INT AUTO_INCREMENT
  Imie VARCHAR(100) NOT NULL
  Nazwisko VARCHAR(100) NOT NULL
  FK(ID_Druzyny) INT
  Pozycja VARCHAR(20)
)

Table(Stadion,
  PK(ID_Stadionu) INT AUTO_INCREMENT
  Nazwa_stadionu VARCHAR(100) NOT NULL
  Pojemnosc INT NOT NULL
  Miasto VARCHAR(100) NOT NULL
)

Table(Statystyki_meczu,
  PK(ID_Statystyki_meczu) INT AUTO_INCREMENT
  Posiadanie_pilki_gospodarzy DECIMAL(5, 2) NOT NULL
  Posiadanie_pilki_gosci DECIMAL(5, 2) NOT NULL
  Strzaly_gospodarzy INT NOT NULL
  Strzaly_gosci INT NOT NULL
  Strzaly_celne_gospodarzy INT NOT NULL
  Strzaly_celne_gosci INT NOT NULL
  Zolte_kartki_gospodarzy INT NOT NULL
  Zolte_kartki_gosci INT NOT NULL
  Czerwone_kartki_gospodarzy INT NOT NULL
  Czerwone_kartki_gosci INT NOT NULL
)

Table(Mecze,
  PK(ID_Meczu) INT AUTO_INCREMENT
  FK(ID_Statystyki_meczu) INT
  FK(ID_Stadionu) INT
  Data_meczu DATE NOT NULL
  Faza_turnieju VARCHAR(50) NOT NULL
  FK(Gospodarz_ID_Druzyny) INT
  FK(Gosc_ID_Druzyny) INT
)

Table(Wyniki,
  PK(ID_Wyniku) INT AUTO_INCREMENT
  FK(ID_Meczu) INT
  Gospodarz_ilosc_goli INT CHECK (Gospodarz_ilosc_goli >= 0)
  Gosc_ilosc_goli INT CHECK (Gosc_ilosc_goli >= 0)
)

Grupy "1" -- "N" Druzyna : Contains
Druzyna "1" -- "N" Gracze : Has
Stadion "1" -- "N" Mecze : Hosts
Statystyki_meczu "1" -- "1" Mecze : Belongs_to
Mecze "1" -- "1" Wyniki : Has_result

@enduml
